<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2023 RUB-SE-LAB
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Moodivation</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="sensorServiceDescription">This service is used to collect sensor data.</string>
    <string name="locationServiceDescription">This service is used to collect location data.</string>
    <string name="accuracyLabelText">Accuracy</string>
    <string name="frequencyLabelText">Frequency</string>
    <string name="stepDetectorSensorSettingsTitle">Step Detector</string>
    <string name="accelerometerSensorSettingsTitle">Accelerometer</string>
    <string name="locationSettingsTitle">Location Sensors</string>

    <string name="locationPermissionDialogTitle">Location Permissions</string>
    <string name="locationPermissionDialogText">Please allow us to access your location :)</string>
    <string name="locationBackgroundPermissionDialogTitle">Location Permissions</string>
    <string name="locationBackgroundPermissionDialogText">Please allow us to access your location in the background :)</string>
    <string name="locationPermissionEnableInSettingsDialogText">Please allow us to access your location :) Go to settings.</string>
    <string name="locationServiceForegroundNotificationTitle">Location Service</string>
    <string name="locationServiceForegroundNotificationText">We are collecting location data.</string>

    <string name="addQuestionNoteAlertTitle">Add Note</string>
    <string name="questionnaireNoteViewEditTextHint">Add your notes here.</string>

    <string name="startInterventionBtnText">Start Intervention</string>
    <string name="skipInterventionBtnText">Skip Intervention</string>

    <string name="chronometerDescriptionText">Elapsed Time</string>
    <string name="stepDescriptionText">Steps</string>
    <string name="speedDescriptionText">Speed in m/s</string>
    <string name="travelledDistanceDescriptionText">Travelled Distance</string>
    <string name="startButtonText">Start</string>
    <string name="stopButtonText">Stop</string>

    <string name="interventionRatingLabel">Rating</string>
    <string name="interventionCommentLabel">Comment</string>

    <string name="interventionFeedbackDialogTitle">Feedback</string>
    <string name="interventionDialogCommentBtn">Comment</string>
    <string name="interventionDialogSkipBtn">Skip</string>

    <string name="home">Home</string>
    <string name="activities">Activities</string>
    <string name="rewards">Rewards</string>
    <string name="settings">Settings</string>
    <string name="data">Data</string>

    <string name="charts">Charts</string>
    <string name="records">Records</string>

    <string name="addInterventionItem">Add Intervention</string>
    <string name="uploadDataItem">Upload Data</string>



    <string name="moreStepsSharedMessage">I recorded more than %NUM% steps today! Moodivation helped me to stay motivated and track my progress.</string>
    <string name="stepsSharedMessage">I recorded %NUM% steps today! Moodivation helped me to stay motivated and track my progress.</string>
    <string name="workoutsStreakSharedMessage">I recorded workouts for %NUM% days in a row! Moodivation helped me to stay motivated and track my progress.</string>
    <string name="workoutStreakSharedMessage">I recorded workouts for 1 day in a row! Moodivation helped me to stay motivated and track my progress.</string>
    <string name="moreRunsSharedMessage">I completed more than %NUM% runs this month! Moodivation helped me to stay motivated and track my progress.</string>
    <string name="runsSharedMessage">I completed %NUM% runs this month! Moodivation helped me to stay motivated and track my progress.</string>
    <string name="moreBikeRidesSharedMessage">I completed more than %NUM% bike rides this month! Moodivation helped me stay motivated and track my progress.</string>
    <string name="bikeRidesSharedMessage">I completed %NUM% bike rides this month! Moodivation helped me stay motivated and track my progress.</string>

    <string name="digitSpanCongrats">Congratulations! Click start to proceed.</string>
    <string name="digitSpanFinalRes">Wrong number! Your maximum is %NUM%.</string>
    <string name="digitSpanEnterNumbersInstruction">Enter the numbers</string>
    <string name="digitSpanMemorizeInstruction">Try to memorize the numbers!</string>
    <string name="digitSpanStartBtn">Start</string>

    <string name="questionnaireSaveBtn">Save</string>
    <string name="questionnaireAddNoteBtn">Add Note</string>

    <string name="recordDeleteBtn">Delete</string>

    <string name="receiveNotifications">Receive notifications</string>
    <string name="changeIntervals">Change Intervals</string>
    <string name="intervalsOverlapHint">Make sure the intervals are correct and don\'t overlap.</string>
    <string name="morningInterval">Morning Interval</string>
    <string name="dayInterval">Day Interval</string>
    <string name="eveningInterval">Evening Interval</string>
    <string name="allowDataCollection">Allow data collection</string>
    <string name="allowDataCollectionToStoreResults">Allow data collection in the settings to save results.</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="timesPerDay">Times per day</string>
    <string name="periodicity">Periodicity</string>
    <string name="digitSpanTask">Digit Span Task</string>
    <string name="licenses">Licenses</string>
    <string name="settingsSave">Save</string>
    <string name="physicalActivity">Physical Activity</string>

    <string name="from">From</string>

    <string name="to">To</string>
    <string name="moreRuns">You went for a run more than 10 times this month!</string>
    <string name="notEnoughSteps">You didn\'t walk 5000 steps today</string>
    <string name="notWorkoutStreak">You don\'t have a workout streak yet.</string>
    <string name="moreRides">You rode a bike more than 10 times this month!</string>
    <string name="workoutsLeft">/10. You have %NUM% workouts left.</string>
    <string name="runsLeft">/10. You have %NUM% runs left.</string>
    <string name="walkedSteps">You recorded %NUM% steps today!</string>
    <string name="workoutStreak">Your workout streak is %NUM% day!</string>
    <string name="workoutStreakPlural">Your workout streak is %NUM% days!</string>

    <string name="wellbeingChartTitle">Wellbeing</string>
    <string name="stepsChartTitle">Steps</string>
    <string name="altitudeChartTitle">Elevation Plot</string>

    <string name="dataUploadTitle">Data Upload</string>
    <string name="dataUploadError">Something went wrong.</string>
    <string name="dataUploadSuccess">Upload was successful.</string>
    <string name="dataUploadOk">OK</string>
    <string name="settingsSuccess">Success</string>
    <string name="settingSavedMessage">All the changes were saved.</string>

    <string name="questionnaireNotificationTitle">Questionnaire Reminder</string>
    <string name="morningQuestionnaireNotification">Please fill out your morning questionnaire</string>
    <string name="noonQuestionnaireNotification">Please fill out your noon questionnaire</string>
    <string name="eveningQuestionnaireNotification">Please fill out your evening questionnaire</string>
    <string name="allowQuestionnaireDataCollection">Allow data collection to be able to complete the questionnaire</string>

    <string name="noRecordsAvailable">You don\'t have any saved records yet.</string>
    <string name="noDataAvailable">No data available.</string>

</resources>