<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_weight="0"
        android:text="@string/interventionFeedbackDialogTitle"
        android:textIsSelectable="false"
        android:textSize="26dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/interventionRatingLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/interventionRatingLabel"
        android:textSize="18dp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/interventionRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="0"
        android:numStars="5" />

    <TextView
        android:id="@+id/interventionCommentLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="0"
        android:text="@string/interventionCommentLabel"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/interventionCommentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="0"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />
</LinearLayout>